/* 
  Localizable.strings
  CometChatPro-swift-sampleApp

  Created by Pushpsen Airekar on 09/04/19.
  Copyright © 2019 Pushpsen Airekar. All rights reserved.
*/
// ------- Permissions PopUp Localization start -------//

"CometChat Pro Sample App requires above permissions to perform the necessary actions." = "CometChat Pro Sample App requires above permissions to perform the necessary actions.";
"Permission denied" ="Permission denied";
"Please, go to Settings and allow permissions" = "Please, go to Settings and allow permissions";
"Cancel" ="Cancel";
"Settings" ="Settings";
"Allow" ="Allow";
"Allowed" ="Allowed";
"Permissions Request" = "Permissions Request";
"Camera" = "Camera";
"Photo Library" = "Photo Library";
"Notification" ="Notification";
"Microphone" = "Microphone";
"Calendar" = "Calendar";
"Contacts" ="Contacts";
"Reminders" ="Reminders";
"Speech" = "Speech";
"Location" = "Location";
"Motion" = "Motion";
"Media Library" = "Media Library";
"Allow app for use camera" = "Allow app for use camera";
"Access for save photos in your gallery" = "Access for save photos in your gallery";
"Allow record voice from app" = "Allow record voice from app";
"Access for your contacts and phones" = "Access for your contacts and phones";
"Get important information without opening app." = "Get important information without opening app.";
"Application can create new task" ="Application can create new task";
"Allow check you voice" = "Allow check you voice";
"App will can check your location" = "App will can check your location";
"Allow reports motion and environment-related data" = "Allow reports motion and environment-related data";
"Allow check your media" = "Allow check your media";

// ------- Permissions PopUp Localization end -------//


// ------- LoginPage Localization start -------//

"Warning!" =  "Warning!";
"UID cannot be Empty" = "UID cannot be Empty";
"Please fill the APP-ID and API-KEY in CometChat-info.plist file." = "Please fill the APP-ID and API-KEY in CometChat-info.plist file.";
"Login Sucessful" = "Login Sucessful";
"Login Failure" = "Login Failure";
"Login with" =  "Login with";

// ------- LoginPage Localization end -------//

// ------- Tabbar Localization start-------//

"Chats" = "Chats";
"Contacts" = "Contacts";
"Groups" = "Groups";

// ------- Tabbar Localization End-------//


// ------- GroupList Localization start-------//

"Search Name" =  "Search Name";
"Enter Password" = "Enter Password";
"Kindly, Enter the password to proceed." = "Kindly, Enter the password to proceed.";
"Join" = "Join";
"Group Joined Sucessfully." = "Join";
"Failed to join group" =  "Failed to join group";
"Joined Groups" = "Joined Groups";
"Other Groups" = "Other Groups";
"Calling ..." = "Calling ...";
"More" = "More";
"Create Group" = "Create Group";
"Cancel" = "Cancel";
"Public Group" =  "Public Group";
"Password - Protected" = "Password - Protected";
"Private Group" = "Private Group";
"Group created successfully." = "Group created successfully.";
"Fail to create Group." = "Fail to create Group.";

// ------- GroupList Localization End-------//

// ------- UserList Localization End-------//

"Online" = "Online";
"Offline" = "Offline";

// ------- UserList Localization End-------//

// ------- ChatList Localization start-------//

"Type a message..." = "Type a message...";
"Send AudioFile" = "Send AudioFile";
"Are you sure want to send this Audio note." = "Are you sure want to send this Audio note.";
"Send" = "Send";
"Recording..." = "Recording...";
"View Profile" = "View Profile";
"Call Initiated" = "Call Initiated";
"View Profile" = "View Profile";
"Call Unanswered" = "Call Unanswered";
"Call Rejected" = "Call Rejected";
"Call Busy" = "Call Busy";
"Call Cancelled" = "Call Cancelled";
"Call Ended" = "Call Ended";
"Camera" = "Camera";
"Next" = "Next";
"Video" = "Video";
"Albums" = "Albums";
"Library" = "Library";
"Cover" = "Cover";
"Ok" = "Ok";
"Done" = "Done";
"Save" = "Save";
"Processing" = "Processing";
"Trim" = "Trim";
"Cover" = "Cover";
"Filter" = "Filter";
"Crop" = "Crop";
"Limit Reached" = "Limit Reached";
"Gallery" = "Gallery";
"Photo & Video Library" = "Photo & Video Library";
"Document" = "Document";
"Typing..." = "Typing...";

// ------- ChatList Localization end-------//

// ------- More Settings Localization start-------//

"View Profile" =  "View Profile";
"Bots" = "Bots";
"Chat Settings" = "Chat Settings";
"Notification" = "Notification";
"Blocked User" = "Blocked User";
"Change Language" = "Change Language";
"Games" = "Games";
"Logout" = "Logout";
"This feature has not been added yet" = "This feature has not been added yet";
"Are you sure you want to Logout?" = "Are you sure you want to Logout?";
"Fail to logout at this moment." = "Fail to logout at this moment.";

// ------- More Settings Localization end-------//

// ------- View Member Localization start-------//

"View Member" = "View Member";
"Admin" = "Admin";
"Moderator" ="Moderator";
"Participant" = "Participant";
"You" = "You";
"Ban User" = "Ban User";
"Kick User" = "Kick User";
"Update Scope" = "Update Scope";
"Cannot kick or ban Modarator" = "Cannot kick or ban Modarator";
"Cannot perform action on Yourself." = "Cannot perform action on Yourself.";

// ------- View Member Localization end-------//


// ------- User Profile Localization start-------//

"Audio Call" =  "Audio Call";
"Video Call" = "Video Call";
"Status Message" = "Status Message";
"Set Status" = "Set Status";
"View Member" = "View Member";
"Add Member" = "Add Member";
"Unban Member" = "Unban Member";
"Leave Group" = "Leave Group";
"Delete Group" = "Delete Group";
"This feature has not been added yet." = "This feature has not been added yet.";
"Group left Sucessfully." = "Group left Sucessfully.";
"Fail to leave Group." = "Fail to leave Group.";
"Group deleted Sucessfully." = "Group deleted Sucessfully.";
"Fail to delete Group." = "Fail to delete Group.";
"Unban Members" = "Unban Members";

// ------- User Profile Localization end-------//
