...

extension MainViewController: LogoutCellDelegate {
   
    func didlogoutButtonPressed(_ sender: UIButton) {
        
        // Declare Alert
        let dialogMessage = UIAlertController(title: "⚠️ Warning!", message: "Are you sure you want to Logout?", preferredStyle: .alert)

        // Create OK button with action handler
        let ok = UIAlertAction(title: "OK", style: .default, handler: { (action) -> Void in
                 CometChat.logout(onSuccess: { (success) in
                     DispatchQueue.main.async {
                         let mainStoryboard: UIStoryboard = UIStoryboard(name: "Main", bundle: nil)
                         let viewController = mainStoryboard.instantiateViewController(withIdentifier: "loginWithDemoUsers") as! LoginWithDemoUsers
                         UIApplication.shared.keyWindow?.rootViewController = viewController
                        CometChatSnackBoard.display(message:  "Logged out successfully.", mode: .error, duration: .short)
...
